# boinor

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: validation_trigger.yml
contrib/render/: setup_dskexp.bat  setup_dskexp.sh
docs/source/: bibliography.md  changelog.md  conf.py  gallery.md
docs/source/examples/: aitoff.myst.md  going-to-jupiter-with-python-using-jupyter-and-poliastro.myst.md  going-to-mars-with-python-using-poliastro.myst.md  render-dsk-kernels.myst.md  visualizing-the-spacex-tesla-roadster-trip-to-mars.myst.md
docs/source/examples/kernels/: README.md
misc/: issues.json.open
src/boinor/: __init__.py  ephem.py  maneuver.py  sensors.py  spheroid_location.py  warnings.py
src/boinor/_math/: integrate.py  interpolate.py  ivp.py  linalg.py  optimize.py  special.py
src/boinor/constants/: __init__.py  general.py  rotational_elements.py
src/boinor/core/: angles.py  czml_utils.py  events.py  iod.py  perturbations.py  sensors.py  util.py
src/boinor/core/propagation/: base.py  cowell.py  danby.py  farnocchia.py  gooding.py  markley.py  mikkola.py  pimienta.py  recseries.py  vallado.py
src/boinor/core/thrust/: __init__.py  change_a_inc.py
src/boinor/czml/: extract_czml.py
src/boinor/earth/: enums.py  util.py
src/boinor/earth/atmosphere/: __init__.py  jacchia.py
src/boinor/frames/: __init__.py  ecliptic.py  enums.py  equatorial.py  fixed.py  util.py
src/boinor/iod/: __init__.py
src/boinor/plotting/: __init__.py  aitoff.py  gabbard.py  tisserand.py
src/boinor/plotting/orbit/: plotter.py
src/boinor/plotting/orbit/backends/: matplotlib.py  plotly.py
src/boinor/render/: __init__.py  scene.py
src/boinor/spacecraft/: __init__.py
src/boinor/threebody/: cr3bp_lib_calc.py  flybys.py
src/boinor/twobody/: __init__.py  angles.py  elements.py  events.py  mean_elements.py  sampling.py  states.py
src/boinor/twobody/orbit/: __init__.py  creation.py  scalar.py
src/boinor/twobody/propagation/: _compat.py  cowell.py  danby.py  enums.py  farnocchia.py  gooding.py  markley.py  mikkola.py  pimienta.py  recseries.py  vallado.py
src/boinor/twobody/thrust/: __init__.py  change_a_inc.py  change_ecc_inc.py
tests/: test_bodies.py  test_czml.py  test_frames.py  test_io.py  test_sensors.py  test_util.py
tests/tests_core/: test_core_angles.py  test_core_earth_athmosphere.py  test_core_elements.py  test_core_propagation.py  test_core_util.py
tests/tests_core/tests_thrust/: test_change.py
tests/tests_earth/: test_earth_util.py  test_earthsatellite.py
tests/tests_earth/tests_atmosphere/: test_coesa62.py  test_coesa76.py  test_jacchia77.py
tests/tests_earth/tests_plotting/: test_groundtrack.py
tests/tests_math/: test_leftovers.py
tests/tests_plotting/: test_aitoff.py  test_gabbard.py  test_misc.py  test_orbit_backends.py  test_orbit_plotter.py  test_porkchop.py  test_tisserand.py
tests/tests_render/: test_load_data.py  test_scene.py
tests/tests_spacecraft/: test_spacecraft.py
tests/tests_threebody/: test_cr3bp_lib_calc.py
tests/tests_twobody/: test_angles.py  test_elements.py  test_events.py  test_orbit.py  test_propagation.py  test_sampling.py  test_states.py  test_thrust.py
