[build-system]
requires = [
    "flit_core >=3.4,<4",
    "wheel",
    "numpy >= 2.0.2",
]
build-backend = "flit_core.buildapi"

[project]
name = "boinor"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "COPYING"}
## former authors/maintainers for poliastro
#authors = [
#    {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"}
#]
#maintainers = [
#    {name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"},
#    {name = "Jorge Martinez Garrido", email = "contact@jorgemartinez.space"}
#]
authors = [
    {name = "Thorsten Alteholz", email = "boinor@alteholz.dev"}
]
maintainers = [
    {name = "Thorsten Alteholz", email = "boinor@alteholz.dev"}
]
keywords = [
    "aero",
    "aerospace",
    "engineering",
    "astrodynamics",
    "orbits",
    "kepler",
    "orbital mechanics"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy >=6.1",
    "astroquery >=0.3.9",
    "jplephem",
    "matplotlib >=2.0,!=3.0.1",
    "numba >=0.61.0 ; python_version>='3.10'",
    "numpy >= 2.0.2",
    "pandas",
    "plotly >=4.0,<7",
    "pyerfa",
    "scipy >=1.4.0",
    "vispy >=0.16.0",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://www.boinor.space"
Documentation = "https://docs.boinor.space"
Source = "https://github.com/boinor/boinor"
Tracker = "https://github.com/boinor/boinor/issues"
Funding = "https://opencollective.com/boinor"
Changelog = "https://docs.boinor.space/en/stable/changelog.html"

[project.optional-dependencies]
jupyter = ["notebook", "ipywidgets>=7.6"]
cesium = ["czml3 ~=0.5.3"]
doc = [
    "httpx",
    "ipython>=5.0",
    "ipywidgets>=7.6",
    "jupyter-client",
    "jupytext",
    "jupyter",
    "jupyter_rfb",
    "myst-parser", #>=0.13.1,<1.0.0",
    "nbsphinx>=0.8.6",
    "nbconvert>=5.5",
    "sgp4",
    "sphinx<9.0", #!=3.5,!=4.0,<5.1",  # https://github.com/readthedocs/sphinx-hoverxref/issues/119
    "sphinx-autoapi", # >=3.0.0",
    "sphinx-gallery<=0.19.0",  # Just to avoid the jupytext warning
    "sphinx_rtd_theme", # ~=1.0.0",
    "sphinx-hoverxref", # ==0.7b1",
    "sphinx-notfound-page",
    "sphinx-copybutton", # >0.2.9",
    "sphinx-github-role", # ~=0.1.0",
    "sphinxcontrib-bibtex",
]
test = [
    "coverage",
    "hypothesis",
    "import-linter[toml]",
    "interrogate",
    "mypy>=0.740",
    "pre-commit",
    "pytest<8.0,>=7.3", # due to pytest-timestamp
    "pytest-cov<2.6.0",  # https://github.com/pytest-dev/pytest-cov/issues/222
    "pytest-doctestplus>=0.8",  # https://github.com/astropy/pytest-doctestplus/issues/118
    "pytest-mpl",
    "pytest-mypy",
    "pytest-remotedata",
    "pytest-xdist[psutil]",
    "pytest-timestamps",
    "pytest-benchmark",
    "tox",
    "vulture",
]

[tool.flit.sdist]
include = [
    "src/boinor/atmosphere/data/coesa62.dat",
    "src/boinor/atmosphere/data/coesa76.dat",
    "src/boinor/atmosphere/data/coesa76_p.dat",
    "src/boinor/atmosphere/data/coesa76_rho.dat",
    "setup.cfg"
]
exclude = [
    "docs/"
]

[tool.black]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
#    "D",  # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",  # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",   # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "NPY201", "NPY003",
]

ignore = [
    "E501",  # Line too long. Ignoring this so "black" manages line length.
]

exclude = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["boinor"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.mypy]
check_untyped_defs = true
strict_optional = false
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
omit = ["contrib/*"]
show_missing = true

[tool.importlinter]
# Include Astropy to properly analyze external submodules,
# see https://github.com/seddonym/import-linter/issues/111
root_packages = ["boinor", "astropy"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "boinor.core does not import astropy.units"
type = "forbidden"
source_modules = ["boinor.core"]
forbidden_modules = ["astropy.units"]

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox", "dist", "build", ".venv"]
testpaths = ["tests"]
python_files ="test_*.py"
doctest_plus = false
addopts = ["--strict-markers"]
markers = ["slow", "remote_data", "filterwarnings", "mpl_image_compare"]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
# set small goals :-) (org: 80)
fail-under = 50
exclude = ["setup.py", "docs", "build"]
# example regex
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
ext = []
# possible values: sphinx (default), google
style = "sphinx"
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
# output file logation
generate-badge = "."
badge-format = "svg"
